native/java/app/src/main/java/org/zowe/zowex/ffm/generated/ZjbCApi.java

// Generated by jextract

package org.zowe.zowex.ffm.generated;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class ZjbCApi extends ZjbCApi$shared {

    ZjbCApi() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int true_ = (int)1L;
    /**
     * {@snippet lang=c :
     * #define true 1
     * }
     */
    public static int true_() {
        return true_;
    }
    private static final int false_ = (int)0L;
    /**
     * {@snippet lang=c :
     * #define false 0
     * }
     */
    public static int false_() {
        return false_;
    }
    private static final int __bool_true_false_are_defined = (int)1L;
    /**
     * {@snippet lang=c :
     * #define __bool_true_false_are_defined 1
     * }
     */
    public static int __bool_true_false_are_defined() {
        return __bool_true_false_are_defined;
    }
    /**
     * {@snippet lang=c :
     * typedef long ptrdiff_t
     * }
     */
    public static final OfLong ptrdiff_t = ZjbCApi.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef unsigned long size_t
     * }
     */
    public static final OfLong size_t = ZjbCApi.C_LONG;
    /**
     * {@snippet lang=c :
     * typedef int wchar_t
     * }
     */
    public static final OfInt wchar_t = ZjbCApi.C_INT;

    private static class zjb_c_list_jobs_by_owner {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_list_jobs_by_owner");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZJobListResponse_C *zjb_c_list_jobs_by_owner(const char *owner_name, const char *prefix, const char *status)
     * }
     */
    public static FunctionDescriptor zjb_c_list_jobs_by_owner$descriptor() {
        return zjb_c_list_jobs_by_owner.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZJobListResponse_C *zjb_c_list_jobs_by_owner(const char *owner_name, const char *prefix, const char *status)
     * }
     */
    public static MethodHandle zjb_c_list_jobs_by_owner$handle() {
        return zjb_c_list_jobs_by_owner.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZJobListResponse_C *zjb_c_list_jobs_by_owner(const char *owner_name, const char *prefix, const char *status)
     * }
     */
    public static MemorySegment zjb_c_list_jobs_by_owner$address() {
        return zjb_c_list_jobs_by_owner.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZJobListResponse_C *zjb_c_list_jobs_by_owner(const char *owner_name, const char *prefix, const char *status)
     * }
     */
    public static MemorySegment zjb_c_list_jobs_by_owner(MemorySegment owner_name, MemorySegment prefix, MemorySegment status) {
        var mh$ = zjb_c_list_jobs_by_owner.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_list_jobs_by_owner", owner_name, prefix, status);
            }
            return (MemorySegment)mh$.invokeExact(owner_name, prefix, status);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_get_job_status {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_get_job_status");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZJobResponse_C *zjb_c_get_job_status(const char *jobid)
     * }
     */
    public static FunctionDescriptor zjb_c_get_job_status$descriptor() {
        return zjb_c_get_job_status.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZJobResponse_C *zjb_c_get_job_status(const char *jobid)
     * }
     */
    public static MethodHandle zjb_c_get_job_status$handle() {
        return zjb_c_get_job_status.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZJobResponse_C *zjb_c_get_job_status(const char *jobid)
     * }
     */
    public static MemorySegment zjb_c_get_job_status$address() {
        return zjb_c_get_job_status.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZJobResponse_C *zjb_c_get_job_status(const char *jobid)
     * }
     */
    public static MemorySegment zjb_c_get_job_status(MemorySegment jobid) {
        var mh$ = zjb_c_get_job_status.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_get_job_status", jobid);
            }
            return (MemorySegment)mh$.invokeExact(jobid);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_list_spool_files {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_list_spool_files");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZJobDDListResponse_C *zjb_c_list_spool_files(const char *jobid)
     * }
     */
    public static FunctionDescriptor zjb_c_list_spool_files$descriptor() {
        return zjb_c_list_spool_files.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZJobDDListResponse_C *zjb_c_list_spool_files(const char *jobid)
     * }
     */
    public static MethodHandle zjb_c_list_spool_files$handle() {
        return zjb_c_list_spool_files.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZJobDDListResponse_C *zjb_c_list_spool_files(const char *jobid)
     * }
     */
    public static MemorySegment zjb_c_list_spool_files$address() {
        return zjb_c_list_spool_files.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZJobDDListResponse_C *zjb_c_list_spool_files(const char *jobid)
     * }
     */
    public static MemorySegment zjb_c_list_spool_files(MemorySegment jobid) {
        var mh$ = zjb_c_list_spool_files.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_list_spool_files", jobid);
            }
            return (MemorySegment)mh$.invokeExact(jobid);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_read_spool_file {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER,
            ZjbCApi.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_read_spool_file");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_read_spool_file(const char *jobid, int key)
     * }
     */
    public static FunctionDescriptor zjb_c_read_spool_file$descriptor() {
        return zjb_c_read_spool_file.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_read_spool_file(const char *jobid, int key)
     * }
     */
    public static MethodHandle zjb_c_read_spool_file$handle() {
        return zjb_c_read_spool_file.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_read_spool_file(const char *jobid, int key)
     * }
     */
    public static MemorySegment zjb_c_read_spool_file$address() {
        return zjb_c_read_spool_file.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_read_spool_file(const char *jobid, int key)
     * }
     */
    public static MemorySegment zjb_c_read_spool_file(MemorySegment jobid, int key) {
        var mh$ = zjb_c_read_spool_file.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_read_spool_file", jobid, key);
            }
            return (MemorySegment)mh$.invokeExact(jobid, key);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_get_job_jcl {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_get_job_jcl");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_get_job_jcl(const char *jobid)
     * }
     */
    public static FunctionDescriptor zjb_c_get_job_jcl$descriptor() {
        return zjb_c_get_job_jcl.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_get_job_jcl(const char *jobid)
     * }
     */
    public static MethodHandle zjb_c_get_job_jcl$handle() {
        return zjb_c_get_job_jcl.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_get_job_jcl(const char *jobid)
     * }
     */
    public static MemorySegment zjb_c_get_job_jcl$address() {
        return zjb_c_get_job_jcl.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_get_job_jcl(const char *jobid)
     * }
     */
    public static MemorySegment zjb_c_get_job_jcl(MemorySegment jobid) {
        var mh$ = zjb_c_get_job_jcl.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_get_job_jcl", jobid);
            }
            return (MemorySegment)mh$.invokeExact(jobid);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_submit_job {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_submit_job");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_submit_job(const char *jcl_content)
     * }
     */
    public static FunctionDescriptor zjb_c_submit_job$descriptor() {
        return zjb_c_submit_job.DESC;
    }
